--- a/main.tex
+++ b/main.tex
@@ -82,12 +82,14 @@
             \item \underline{this is subitem 2}
             \item \alert{this is subitem 3}
         \end{enumerate} 
+        \pause
         \item this is item 2
         \begin{enumerate}[(i)]
             \item {\color{red} this is subitem 1}
             \item \bf{this is subitem 2}
         \end{enumerate} 
         \item this is item 3
+        \pause
         \begin{enumerate}[(I)]
             \item {\color{green} this is subitem 1}
             \item \it{this is subitem 2}
@@ -107,7 +109,7 @@
         \end{equation}
     \end{block}
     %
-    \onslide<2->{
+    \pause
     \begin{alertblock}{The heat equation:}
         \begin{equation}
             \partial_{t} u = \nabla^2 u + \sigma.
@@ -115,11 +117,11 @@
     \end{alertblock}
     }
     %
-    \onslide<3->{
+    \pause
     adding the above equations yields:
     }
     %
-    \onslide<4->{
+    \pause
     \begin{exampleblock}{The advection-diffusion equation:}
         \begin{equation}
             \partial_{t} u + \nabla\cdot f(u) = \nabla^2 u + \sigma.
